tests/bad/func/bad_arg_type.oc
/// fail: Expected `x` with type i32, but got bool

def foo(x: i32) { }

def main() {
    foo(true)
}